[tool.poetry]
name = "league-game-history"
version = "0.1.0"
description = ""
authors = ["unsupervised-machine <taran.s.lau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pymongo = "^4.5.0"
faker = "^19.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
